[gd_scene load_steps=5 format=3 uid="uid://bob6f17cvshc0"]

[ext_resource type="Script" path="res://resource/organs/intermittent_organ/gap_spike_organ.gd" id="1_i5xks"]
[ext_resource type="Texture2D" uid="uid://dir4xaqhgm1ng" path="res://assets/tile/陷阱.png" id="2_c60fd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n6uw3"]
atlas = ExtResource("2_c60fd")
region = Rect2(96, 0, 48, 54)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8cxpt"]
size = Vector2(48, 15)

[node name="GapSpikeOrgan" type="CharacterBody2D"]
position = Vector2(0, 24)
collision_layer = 48
script = ExtResource("1_i5xks")
organ_time = 2.0
organ_name = "消失地刺"
organ_desc = "每隔一段时间会消失/出现"
organ_texture = SubResource("AtlasTexture_n6uw3")

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7.5)
texture = ExtResource("2_c60fd")
region_enabled = true
region_rect = Rect2(96, 42, 48, 13)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8cxpt")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
